--- a/pages/team.html
+++ b/pages/team.html
@@ -35,7 +35,7 @@
     <section class="team-photo">
         <div class="container">
             <div class="team-image">
-                <img src="../images/team-photo.jpg" alt="Team Quantum Quenchers">
+                <img src="../images/team-photo.png" alt="Team Quantum Quenchers">
             </div>
             <div class="team-intro">
                 <h2>Team: Quantum Quenchers</h2>
