--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <div class="team-grid">
                 <div class="team-member">
                     <h3>Nicholas Dobson</h3>
-                    <p>Full-stack Developer</p>
+                    <p>Full-Stack Developer</p>
                     <p class="student-id">u23671964</p>
                 </div>
                 <div class="team-member">
                     <h3>Shaylin Govender</h3>
-                    <p>Software Engineer</p>
+                    <p>Full-Stack Developer</p>
                     <p class="student-id">u20498952</p>
                 </div>
                 <div class="team-member">
